# MTCNN-NCNN

./: .gitignore  CMakeLists.txt  conanfile.txt
src/mtcnn/: CMakeLists.txt  mtcnn.cpp
src/mtcnn_test/: CMakeLists.txt  example_face.cpp  ffmpeg_common.cpp  ffmpeg_common.hpp  ffmpeg_input.cpp  ffmpeg_input.hpp  main.cpp  stream_output.cpp  stream_output.hpp  subprocess_output.cpp  subprocess_output.hpp  test_input.cpp  test_input.hpp  video_input.cpp  video_input.hpp  video_output.cpp  video_output.hpp
